<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="smb_save_enabled"
        android:title="@string/settings_storage_enable_save"
        android:summary="@string/settings_storage_enable_save_summary" />

    <com.hippo.preference.ListPreference
        android:key="storage_protocol"
        android:title="@string/settings_storage_protocol"
        android:summary="%s"
        android:defaultValue="smb"
        app:entries="@array/storage_protocol_entries"
        app:entryValues="@array/storage_protocol_values" />

    <com.hippo.ehviewer.preference.SmbConnectionPreference
        android:key="smb_connection"
        android:title="@string/settings_storage_connection"
        app:allowDividerAbove="true" />

    <androidx.preference.Preference
        android:key="smb_benchmark"
        android:title="@string/settings_smb_benchmark"
        android:summary="@string/settings_smb_benchmark_summary" />

    <com.hippo.preference.SwitchPreference
        android:defaultValue="false"
        android:key="smb_auto_download_enabled"
        android:title="@string/settings_smb_enable_auto_download"
        android:summary="@string/settings_smb_enable_auto_download_summary"
        app:allowDividerAbove="true" />

    <com.hippo.preference.EditTextDialogPreference
        android:key="smb_device_name"
        android:title="@string/settings_smb_device_name"
        android:summary="@string/settings_smb_device_name_summary" />

    <com.hippo.preference.EditTextDialogPreference
        android:key="smb_metadata_concurrency"
        android:defaultValue="6"
        android:title="@string/settings_smb_metadata_concurrency"
        android:summary="@string/settings_smb_metadata_concurrency_summary"
        android:inputType="number" />

    <com.hippo.preference.EditTextDialogPreference
        android:key="smb_image_concurrency"
        android:defaultValue="6"
        android:title="@string/settings_smb_image_concurrency"
        android:summary="@string/settings_smb_image_concurrency_summary"
        android:inputType="number" />

    <androidx.preference.Preference
        android:key="smb_auto_tune"
        android:title="@string/settings_smb_autotune"
        android:summary="@string/settings_smb_autotune_summary" />
</PreferenceScreen>
