<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2026 Ehviewer SMB Saver fork
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="?attr/dialogPreferredPadding"
        android:paddingTop="12dp"
        android:paddingRight="?attr/dialogPreferredPadding"
        android:paddingBottom="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_host">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_port">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_share_name">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_share_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_share_path">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_share_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_username">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_smb_password">

            <com.hippo.widget.HackyTextInputEditText
                android:id="@+id/smb_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/smb_signing_disabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="@string/settings_smb_disable_signing"/>

        <TextView
            android:id="@+id/check_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall"/>
    </LinearLayout>
</ScrollView>
